--- a/adaptiv.html
+++ b/adaptiv.html
@@ -15,7 +15,7 @@
     <header class="aHeader">
       <div class="container">
         <div class="left">
-          <a href="/adaptiv.html" class="aLogo">
+          <a href="adaptiv.html" class="aLogo">
             <img src="img/logo.svg" alt="logo" />
           </a>
           <button class="left__btn">
